完成了最短路径

--- a/Tracking/Tracking.csproj
+++ b/Tracking/Tracking.csproj
@@ -120,111 +120,117 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="res\button\back-click.png">
+    <Resource Include="res\button\back-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\back-hover.png">
+    </Resource>
+    <Resource Include="res\button\back-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\back-simple.png">
+    </Resource>
+    <Resource Include="res\button\back-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\click.png">
+    </Resource>
+    <Resource Include="res\button\click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\click2.png">
+    </Resource>
+    <Resource Include="res\button\click2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\company-click.png">
+    </Resource>
+    <Resource Include="res\button\company-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\company-hover.png">
+    </Resource>
+    <Resource Include="res\button\company-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\company-simple.png">
+    </Resource>
+    <Resource Include="res\button\company-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\hover.png">
+    </Resource>
+    <Resource Include="res\button\hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\hover2.png">
+    </Resource>
+    <Resource Include="res\button\hover2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\ineedpost-click.png">
+    </Resource>
+    <Resource Include="res\button\ineedpost-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\ineedpost-hover.png">
+    </Resource>
+    <Resource Include="res\button\ineedpost-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\ineedpost-simple.png">
+    </Resource>
+    <Resource Include="res\button\ineedpost-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\person-click.png">
+    </Resource>
+    <Resource Include="res\button\person-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\person-hover.png">
+    </Resource>
+    <Resource Include="res\button\person-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\person-simple.png">
+    </Resource>
+    <Resource Include="res\button\person-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\post-click.png">
+    </Resource>
+    <Resource Include="res\button\post-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\post-hover.png">
+    </Resource>
+    <Resource Include="res\button\post-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\post-simple.png">
+    </Resource>
+    <Resource Include="res\button\post-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\query-click.png">
+    </Resource>
+    <Resource Include="res\button\query-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\query-hover.png">
+    </Resource>
+    <Resource Include="res\button\query-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\query-simple.png">
+    </Resource>
+    <Resource Include="res\button\query-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\send-click.png">
+    </Resource>
+    <Resource Include="res\button\send-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\send-hover.png">
+    </Resource>
+    <Resource Include="res\button\send-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\send-simple.png">
+    </Resource>
+    <Resource Include="res\button\send-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\settle-click.png">
+    </Resource>
+    <Resource Include="res\button\settle-click.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\settle-hover.png">
+    </Resource>
+    <Resource Include="res\button\settle-hover.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\settle-simple.png">
+    </Resource>
+    <Resource Include="res\button\settle-simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\simple.png">
+    </Resource>
+    <Resource Include="res\button\simple.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\button\simple2.png">
+    </Resource>
+    <Resource Include="res\button\simple2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\company_function.png">
+    </Resource>
+    <Resource Include="res\company_function.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\ico.png">
+    </Resource>
+    <Resource Include="res\ico.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\index.png">
+    </Resource>
+    <Resource Include="res\index.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\person_inquiry.png">
+    </Resource>
+    <Resource Include="res\person_inquiry.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="res\person_send.png">
+    </Resource>
+    <Resource Include="res\person_send.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="distanceMatrix.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="距离矩阵.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
